
add_subdirectory (hiveservice)
add_subdirectory (jobexecutor)
#add_subdirectory (processunitcontroller)
#add_subdirectory (webservice)
#add_subdirectory (mediaimporter)
#add_subdirectory (mediaexporter)
#add_subdirectory (jobcreator)
add_subdirectory (udpnoderesolver)
add_subdirectory (clientcontroller)
add_subdirectory (partitionservice)
add_subdirectory (mqserver)
