#SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -Wl,--allow-multiple-definition" )

add_subdirectory (hiveservice)
add_subdirectory (jobexecutor)
#add_subdirectory (processunitcontroller)
#add_subdirectory (webservice)
#add_subdirectory (mediaimporter)
#add_subdirectory (mediaexporter)
#add_subdirectory (jobcreator)
add_subdirectory (udpnoderesolver)
add_subdirectory (clientcontroller)
add_subdirectory (partitionservice)
add_subdirectory (uploadservice)
add_subdirectory (writerservice)
add_subdirectory (auservice)
#add_subdirectory (clustermanagement)
#add_subdirectory (mqserver)
