
include_directories (${MEC_SOURCE_DIR})


add_subdirectory (lang)
add_subdirectory (core)
add_subdirectory (io)
add_subdirectory (util)
add_subdirectory (db)
add_subdirectory (net)
#add_subdirectory (api)
add_subdirectory (av)
add_subdirectory (hive)
#add_subdirectory (web)
#add_subdirectory (rpc)
#add_subdirectory (mq)
#add_subdirectory (gloox)
#add_subdirectory (zmq)


